# civilization

./: .gitignore  .gitmodules  Cargo.toml
scopes_macro/: Cargo.toml
scopes_macro/src/: lib.rs
src/: base_crud.rs  common_structs.rs  errors.rs  init_service.rs  lib.rs
