[package]
name = "civilization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
validator = "0.16"
axum = "0.5"
serde_json = "1.0"
tracing = "0.1"
sea-orm = { version = "0.9", features = ["mock"] }
dotenv = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tokio = { version = "1.21", features = ["macros", "test-util"]}
time = "0.3"